v7.0/stay-updated/hub-release.md
---
type: page
title: Releases
listed: true
slug: hub-release
description: 
index_title: Releases
hidden: 
keywords: 
tags: 
---

Yoti provides you with a simple dashboard management tool called Yoti Hub to get you up and running with our products. This is where you will obtain your API keys, add your billing information and more.

## [Quick Links](https://developers.yoti.com/releases/yoti-hub#quick-links)

📧 [Integration help](mailto:clientsupport@yoti.com)

🏛 [Business help](https://www.yoti.com/contact-us/)

See release notes below. 

---

## V1.22.0

This was released on 13th December 2021.

{% badge type="success" text="NEW" /%} Organisation type to now include co-operative.

{% badge type="info" text="IMRPOVEMENT" /%} IDV application creation improvements.

---

## V1.21.0

This was released on 11th November 2021.

{% badge type="success" text="NEW" /%} Request ThirdPartyIdentity check (address) with 1 Supporting document only in IDV portal configuration.

{% badge type="info" text="IMRPOVEMENT" /%} UX updates.

---

## V1.20.0

This was released on 30th September 2021.

{% badge type="success" text="NEW" /%} Request AML checks for identity verification portal sessions.

{% badge type="info" text="IMRPOVEMENT" /%} UX updates

---

## V1.19.0

This was released on 10th June 2021.

{% badge type="info" text="IMRPOVEMENT" /%} Reduced information requested on organisation registration QR code to Full Name, Email Address and Remember Me ID and updated onboarding form.

{% badge type="info" text="IMPROVEMENT" /%} Updated settings section for organisations to add their organisation details.

{% badge type="success" text="NEW" /%} New tiles and updated application type naming conventions to align with Yoti website.

{% badge type="success" text="NEW" /%} Added email triggers at various points of the organisation onboarding journey.

{% badge type="success" text="NEW" /%} Updated the Hub overview page to provide more information.

---

## V1.18.4

This was released on 2nd March 2021.

{% badge type="success" text="NEW" /%} Added third party checks - address verification for identity session users.

{% badge type="success" text="NEW" /%} Updated 'Biometric consent' text to include consent requirement for US based customers  for identity session users.

{% badge type="success" text="NEW" /%} Updates on application creation to reduce steps.

---

## V1.18.3

This was released on 3rd February 2021.

{% badge type="info" text="FIX" /%} Error codes

{% badge type="success" text="NEW" /%} Request bank statements for a supporting document.

---

## V1.18.2

This was released on 16th December 2020.

{% badge type="success" text="NEW" /%} Grid display of user permissions

---

## V1.18.1

This was released on 20th November 2020.

{% badge type="success" text="NEW" /%} Added in additional options for the identity session preferences.

{% badge type="success" text="NEW" /%} Businesses can now request supplementary documents through the identity portal.

{% badge type="success" text="NEW" /%} Businesses are able to set additional options in the session configuration such as whether they accept documents to be uploaded, enabling/disabling the ability for the flow to collect biometric consent, support for automatic locale detection.

---

## V1.17.1

This was released on 8th September 2020.

{% badge type="info" text="FIX" /%} Updated link to terms and conditions in menu.

{% badge type="info" text="FIX" /%} Added help text to Sales Tax field in organisation registration.

{% badge type="info" text="FIX" /%} Fixed issue where 'Is your organisation a registered company' radio button was defaulting to No.

{% badge type="info" text="FIX" /%} Internal code maintenance.

---

## V1.17.0

This was released on 2nd July 2020.

{% badge type="success" text="NEW" /%} Updated sandbox key creation to prevent errors if separate users try to create keys at the same time.

{% badge type="success" text="NEW" /%} Restricted the advanced policy editor to organisations

{% badge type="success" text="NEW" /%} Update to the payment client

{% badge type="success" text="NEW" /%} Copy changes.